--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,27 @@
   <name>eComm Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
   	   <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-core</artifactId>
     <version>4.3.7.RELEASE</version>
+</dependency>
+
+ 
+<dependency>
+  <groupId>org.hamcrest</groupId>
+  <artifactId>hamcrest-library</artifactId>
+  <version>1.3</version>
+  <scope>test</scope>
+</dependency>
+  	
+ 	
+  	<dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.11</version>
+  <scope>test</scope>
 </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 <dependency>
